--- a/templates/index.jade
+++ b/templates/index.jade
@@ -45,4 +45,5 @@ html(lang="en")
     script(src="js/jquery.js")
     script(src="js/bootstrap.js")
     script(src="js/respond.js")
+    script(src="js/iourl.js")
     script(src="js/index-page.js")
