--- a/bs3/css/cytube.css
+++ b/bs3/css/cytube.css
@@ -1,3 +1,11 @@
+#drinkbar {
+    margin-left: 0;
+    background-color: #000000;
+    color: #ffffff;
+    text-align: center;
+    font-weight: bold;
+}
+
 #usercountwrap, #currenttitle {
     border: 1px solid #aaaaaa;
     border-bottom: none;
@@ -49,8 +57,12 @@
     margin-top: 20px;
 }
 
-#queue_next, #queue_end, #search_library, #search_youtube {
-    width: 50%;
+#library_search, #queue_next {
+    border-radius: 0;
+}
+
+.input-group-btn > button {
+    border-left: 0;
 }
 
 #voteskip, #getplaylist {
@@ -65,6 +77,11 @@
     border-bottom: 0;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
+}
+
+#getplaylist, #qlockbtn {
+    margin-left: 0;
+    border-left: 0;
 }
 
 #plmeta {
@@ -93,6 +110,28 @@
     float: right;
 }
 
+.queue_entry {
+    background-color: #ffffff;
+    margin: 0 0 2px auto;
+    padding: 2px;
+    font-size: 8pt;
+    border: 1px solid #aaaaaa;
+}
+
+.queue_temp {
+    background-image: url(../img/stripe-diagonal.png);
+}
+
+.queue_active {
+    background-color: #d9edf7;
+    border-color: #bce8f1;
+}
+
+#queue li:last-child {
+    border-bottom: 0;
+    margin-bottom: 0;
+}
+
 .qe_btn {
     height: 20px;
     font-family: Monospace;
@@ -101,11 +140,12 @@
     overflow: hidden;
 }
 
-.qe_buttons, .qe_title, .qe_time {
+.qe_buttons, .qe_title {
     float: left;
 }
 
 .qe_time {
+    float: right;
     font-family: Monospace;
 }
 
