--- a/templates/channel.jade
+++ b/templates/channel.jade
@@ -21,7 +21,7 @@ html(lang="en")
             li
               a(href="https://github.com/calzoneman/sync/wiki/Beginner%27s-Guide-and-FAQ", target="_blank") Help
             li: a(href="account.html") Account
-          form#loginform.navbar-form.navbar-right
+          form#loginform.navbar-form.navbar-right(action="javascript:void(0)")
             .form-group
               input#guestname.form-control(type="text", placeholder="Name")
             button#guestlogin.btn.btn-default Guest Login
@@ -34,7 +34,7 @@ html(lang="en")
             #motd.well
           #drinkbarwrap.col-lg-12
             #drinkbar
-            h1#drinkcount
+              h1#drinkcount
         #announcements.row
         #main.row
           #chatwrap.col-lg-5
@@ -61,11 +61,14 @@ html(lang="en")
                         a.accordion-toggle(data-toggle="collapse", data-parent="#searchpanel-group", href="#librarywrap") Library/YouTube Search
                     #librarywrap.panel-body.collapse
                       .row
-                        #querywrap.col-lg-6
-                          input#library_query.form-control(type="text")
-                        #searchbtns.col-lg-6.btn-group
-                          button#library_search.btn.btn-default Library
-                          button#youtube_search.btn.btn-default YouTube
+                        #querywrap.col-lg-12
+                          .input-group
+                            input#library_query.form-control(type="text")
+                            span.input-group-btn
+                              button#library_search.btn.btn-default Library
+                            span.input-group-btn
+                              button#youtube_search.btn.btn-default YouTube
+                        // #searchbtns.col-lg-6.btn-group
                       ul#library.videolist.col-lg-12
               #playlistmanagerwrap.col-lg-12
                 #playlistmanager-group.panel-group
@@ -75,10 +78,11 @@ html(lang="en")
                         a#userpltoggle.accordion-toggle(data-toggle="collapse", data-parent="playlistmanager-group", href="#userplaylistwrap") Playlist Manager
                     #userplaylistwrap.panel-body.collapse
                       .row
-                        .col-lg-7
-                          input#userpl_name.form-control(type="text", placeholder="Playlist Name")
-                        .col-lg-5
-                          button#userpl_save.btn.btn-block.btn-default Save Playlist
+                        .col-lg-12
+                          .input-group
+                            input#userpl_name.form-control(type="text", placeholder="Playlist Name")
+                            span.input-group-btn
+                              button#userpl_save.btn.btn-default Save
                         ul#userpl_list.col-lg-12
           #rightpane.col-lg-7
             #rightpane-inner.row
@@ -92,10 +96,10 @@ html(lang="en")
                   ul.dropdown-menu(role="menu", aria-labelledby="qdrop")
                     +quality_item("quality_auto", "Quality: Auto")
                     +quality_item("quality_240p", "240p")
-                    +quality_item("quality_360p", "240p")
-                    +quality_item("quality_480p", "240p")
-                    +quality_item("quality_720p", "240p")
-                    +quality_item("quality_1080p", "240p")
+                    +quality_item("quality_360p", "360p")
+                    +quality_item("quality_480p", "480p")
+                    +quality_item("quality_720p", "720p")
+                    +quality_item("quality_1080p", "1080p")
                 button#mediarefresh.btn.btn-sm.btn-default Refresh Media
               #queue_align2
               #plcontrolsouterwrap.col-lg-12
@@ -107,16 +111,18 @@ html(lang="en")
               
                     #playlist_controls.panel-body.collapse
                       .row
-                        .col-lg-8
-                          input#mediaurl.form-control.input-block-level(type="text", placeholder="Media URL")
-                        .col-lg-4.btn-group
-                          button#queue_next.btn.btn-default Next
-                          button#queue_end.btn.btn-default At End
+                        .col-lg-12
+                          .input-group
+                            input#mediaurl.form-control.input-block-level(type="text", placeholder="Media URL")
+                            span.input-group-btn
+                              button#queue_next.btn.btn-default Next
+                            span.input-group-btn
+                              button#queue_end.btn.btn-default At End
                       .row
                         #customembed_wrap.col-lg-12
                           button#customembed_btn.btn.btn-default.btn-block Custom Embed
                           #customembed_entry
-                            | Paste the embed code below and hit Next or End.
+                            | Paste the embed code below and click Next or End.
                             | Acceptable embed codes are <code>&lt;iframe&gt;</code> and <code>&lt;object&gt;</code> tags.
                             textarea#customembed_code.input-block-level.form-control(rows="3")
                         #extended_controls.col-lg-12
@@ -129,6 +135,14 @@ html(lang="en")
                   i.glyphicon.glyphicon-lock
               .col-lg-12
                 #queue.videolist
+                  li.queue_entry
+                    a.qe_title(href="#") Derp
+                    span.qe_time 00:00
+                    div.qe_clear
+                  li.queue_entry.queue_active.queue_temp
+                    a.qe_title(href="#") Derp
+                    span.qe_time 00:00
+                    div.qe_clear
                 #plmeta
                   span#plclount 0 items
                   span#pllength 00:00:00
