--- a/bs3/css/cytube.css
+++ b/bs3/css/cytube.css
@@ -161,3 +161,18 @@
 .well hr {
     border-color: #cccccc;
 }
+
+#csstext, #jstext {
+    font-family: Monospace;
+}
+
+#optedit, #permedit, #filteredit, #motdedit, #cssedit, #jsedit,
+#banlist, #loginhistory, #channelranks, #chanlog {
+    display: none;
+}
+
+#chanlog_contents {
+    max-height: 400px;
+    overflow-y: scroll;
+    margin-top: 10px;
+}
