--- a/templates/channel.jade
+++ b/templates/channel.jade
@@ -10,6 +10,7 @@ html(lang="en")
     link(href="css/bootstrap-theme.css", rel="stylesheet")
     link(href="css/navbar-footer.css", rel="stylesheet")
     link(href="css/cytube.css", rel="stylesheet")
+    link(href="//code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css", rel="stylesheet")
 
   body
     #wrap
@@ -162,6 +163,13 @@ html(lang="en")
         p.muted.credit.
           CyTube Software Copyright &copy; 2013 Calvin Montgomery&nbsp;&middot;&nbsp;Available for free on <a href="http://github.com/calzoneman/sync">GitHub</a>&nbsp;&middot;&nbsp;<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=5Y7PUVVGVSEWG&lc=US&item_name=CyTube&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donate_SM%2egif%3aNonHosted">Donate</a>
     script(src="js/jquery.js")
+    script(src="//code.jquery.com/ui/1.10.3/jquery-ui.js")
     script(src="js/bootstrap.js")
     script(src="js/respond.js")
+    script(src="js/data.js")
     script(src="js/iourl.js")
+    script(src="js/player.js")
+    script(src="js/paginator.js")
+    script(src="js/util.js")
+    script(src="js/ui.js")
+    script(src="js/callbacks.js")
