That's enough for one night

--- a/templates/channel.jade
+++ b/templates/channel.jade
@@ -23,6 +23,7 @@ html(lang="en")
             li
               a(href="https://github.com/calzoneman/sync/wiki/Beginner%27s-Guide-and-FAQ", target="_blank") Help
             li: a(href="account.html") Account
+            li: a(href="javascript:showOptionsMenu()") Options
           form#loginform.navbar-form.navbar-right(action="javascript:void(0)")
             .form-group
               input#guestname.form-control(type="text", placeholder="Name")
