--- a/bs3/css/cytube.css
+++ b/bs3/css/cytube.css
@@ -46,6 +46,20 @@
     margin-bottom: 10px;
 }
 
+#userpl_list {
+    list-style: none outside none;
+    margin-left: 0;
+    max-height: 500px;
+    overflow-y: scroll;
+}
+
+#userpl_list li {
+    clear: both;
+    margin: 2px 0 0 auto;
+    padding: 2px;
+    font-size: 8pt;
+}
+
 #customembed_wrap {
     margin: 5px 0;
 }
