--- a/bs3/css/cytube.css
+++ b/bs3/css/cytube.css
@@ -47,13 +47,16 @@
 }
 
 #userpl_list {
-    list-style: none outside none;
+    list-style-type: none outside none;
     margin-left: 0;
     max-height: 500px;
     overflow-y: scroll;
 }
 
 #userpl_list li {
+    display: inline-block;
+    line-height: 22px;
+    width: 100%;
     clear: both;
     margin: 2px 0 0 auto;
     padding: 2px;
