--- a/bs3/css/cytube.css
+++ b/bs3/css/cytube.css
@@ -47,7 +47,7 @@
 }
 
 #userpl_list {
-    list-style-type: none outside none;
+    list-style: none outside none;
     margin-left: 0;
     max-height: 500px;
     overflow-y: scroll;
@@ -75,6 +75,11 @@
     margin-top: 20px;
 }
 
+#library {
+    padding-left: 0;
+    padding-right: 0;
+}
+
 #library_search, #queue_next {
     border-radius: 0;
 }
@@ -92,7 +97,6 @@
 }
 
 #voteskip, #getplaylist, #qlockbtn {
-    border-bottom: 0;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
 }
@@ -125,6 +129,7 @@
 }
 
 .queue_entry {
+    line-height: 22px;
     background-color: #ffffff;
     margin: 0 0 2px auto;
     padding: 2px;
