--- a/templates/index.jade
+++ b/templates/index.jade
@@ -8,7 +8,7 @@ html(lang="en")
 
     link(href="css/bootstrap.css", rel="stylesheet")
     link(href="css/navbar-footer.css", rel="stylesheet")
-    link(href="css/ytsync.css", rel="stylesheet")
+    link(href="css/cytube.css", rel="stylesheet")
 
   body
     #wrap
