--- a/templates/index.jade
+++ b/templates/index.jade
@@ -23,7 +23,7 @@ html(lang="en")
             li: a(href="account.html") Account
       .container
         .row
-          .col-lg-8
+          .col-lg-8.col-md-8
             h3 Public Channels
             table#channeldata.table.table-striped.table-bordered
               thead
@@ -31,7 +31,7 @@ html(lang="en")
                   th Channel
                   th Connected
                   th Playing
-          .col-lg-4
+          .col-lg-4.col-md-4
             h3 Enter Channel
             input#channel.form-control.input-block-level(type="text", placeholder="Channel Name")
             br
